--- a/chariot-web/app/assets/stylesheets/login.less
+++ b/chariot-web/app/assets/stylesheets/login.less
@@ -16,6 +16,17 @@ a.btn{
 .col_lft .col_pad img{
     margin-bottom: 12px;
 }
+
+    p.error {
+        color: #c00;
+        margin-bottom: 10px;
+        text-shadow: 1px 1px rgba(0,0,0,.1);
+    }
+    p.success {
+        color: #83BD41; 
+        margin-bottom: 10px;
+        text-shadow: 1px 1px rgba(0,0,0,.1);
+    }
 .hdr{margin-bottom:20px;}
 .hdr h3{float:left;}
 .hdr a{float:left;margin-left:12px;margin-top:16px;color:#1E7BCB;text-decoration:none;font-weight:bold;}
