--- a/chariot-web/app/views/interview.scala.html
+++ b/chariot-web/app/views/interview.scala.html
@@ -1,53 +1,64 @@
-@(currentPageId:Integer,documentId:Long,pi:models.PageContent.PageItem,size:Integer)
-@for(module <- pi.moduleList){
-      <ul>
-      @defining(module.`type`){ t =>
-            @t match{
-                case "question" =>{
-                    @defining(Question.getById(module.id)){ question=>
-                        @if(question!=null){
-                            @defining(QuestionDescription.parse(question.description)){ d =>
-                                <li>
-                                    <h5>@d.content</h5>
-                                    @defining(question.`type`){questionType =>
-                                        @questionType match{
-                                            case "choice" =>{
-                                                <ul>
-                                                @for(option <- d.options){
-                                                    <li>
-                                                    <label><input type="radio" name="@question.id">@option</label>
-                                                    </li>
-                                                }
-                                                </ul>
-                                            }
-                                            case "blank" =>{
-                                                <textarea></textarea>
-                                            }
-                                            case "multichoice" =>{
-                                                <ul>
-                                                    @for(option <- d.options){
-                                                    <li>
-                                                        <label><input type="checkbox" name="@question.id">@option</label>
-                                                    </li>
-                                                    }
-                                                </ul>
-                                            }
-                                            case _ =>{}
-                                        }
-                                    }
-                                </li>
-                            }
-                        }
+@(currentPageId:Integer,documentId:Long, documentName:String, pi:models.PageContent.PageItem,size:Integer)
 
-                    }
-                }
-                case _ =>{
-                }
-            }
-      }
-      </ul>
+@import helper._
 
-}
-@if(currentPageId < size-1){
-<a href="/interview/@documentId/@(currentPageId+1)">下一页</a>
+@main(documentName){
+	<section>
+		<h1>@pi.name</h1>
+		<div>@pi.desc</div>
+		@for(module <- pi.moduleList){
+			@defining(module.`type`){ t =>
+				@t match{
+					case "question" =>{
+						@defining(Question.getById(module.id)){ question=>
+							@if(question!=null){
+								@defining(QuestionDescription.parse(question.description)){ d =>
+									<dl>
+										<dt>@d.content</dt>
+										<dd>
+											@defining(question.`type`){questionType =>
+												@questionType match{
+													case "choice" =>{
+															@for(option <- d.options){
+																<span>
+																	<label><input type="radio" name="@question.id">@option</label>
+																</span>
+															}
+													}
+													case "blank" =>{
+														<input placeholder='Your Answer Here.' />
+													}
+													case "multichoice" =>{
+															@for(option <- d.options){
+																<span>
+																	<label><input type="checkbox" name="@question.id">@option</label>
+																</span>
+															}
+													}
+													case _ =>{}
+												}
+											}
+										</dd>
+									</dl>
+								}
+							}
+
+						}
+					}
+					case _ =>{
+					}
+				}
+			}
+		}
+		
+		@if(currentPageId < size-1){
+			<p class="buttons">
+				<a href="/interview/@documentId/@(currentPageId+1)">继续</a>
+			</p>
+		}else{
+	        <p class="buttons">
+				<a>提交</a>
+	        </p>
+		}
+	</section>
 }
