--- a/chariot-web/app/views/main.scala.html
+++ b/chariot-web/app/views/main.scala.html
@@ -5,11 +5,14 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/origin.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+        <header>
+            <a href="@routes.Application.index">@title</a>
+        </header>
         @content
     </body>
 </html>
