interview first edition

--- a/chariot-web/app/views/interview.scala.html
+++ b/chariot-web/app/views/interview.scala.html
@@ -54,7 +54,7 @@
 }
 
 @main(documentName){
-    <form action="/interview/submit" method="post">
+    <form action="/interview/@documentId/submit" method="post">
 	<section>
 		<h1>@pi.name</h1>
 		<div>@pi.desc</div>
