--- a/chariot-admin/app/views/documents/detail.scala.html
+++ b/chariot-admin/app/views/documents/detail.scala.html
@@ -4,7 +4,8 @@
     <li class="active">
         @document.name
         <a href="#/page/@document.id">编辑模块分页>></a>
-        <button class="downloadLink btn btn-primary btn-sm" style="float:right" onclick='window.location.href="/service/download/@helper.urlEncode(document.name)/@document.id"'>下载文档</button>
+        <a class="downloadLink btn btn-primary btn-sm"  href="/service/download/@helper.urlEncode(document.name)/@document.id">下载文档</a>
+        <a class="downloadLink btn btn-primary btn-sm" style="right:165px;" target="_blank" href="" >预览文档</a>
     </li>
 </ol>
 
@@ -45,8 +46,9 @@
                         <h4 class="panel-title">
                         <a href="javascript:;">模块 <span style="color:black;">@module.name</span></a>
                         <div class="download">
-                            <button class="downloadLink btn btn-primary btn-sm"  onclick='window.location.href="/service/download/@helper.urlEncode(module.name)/@module.id"'>下载模块</button>
-                        	<button class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.id" >更新模块</button>
+                            <a class="downloadLink btn btn-primary btn-sm" target="_blank" href="" >预览模块</a>
+                            <a class="downloadLink btn btn-primary btn-sm"  href="/service/download/@helper.urlEncode(module.name)/@module.id">下载模块</a>
+                        	<a class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.id">更新模块</a>
                         </div>
                         <script>
                          jQuery(function(){
