--- a/chariot-admin/app/assets/stylesheets/apps/_document.less
+++ b/chariot-admin/app/assets/stylesheets/apps/_document.less
@@ -32,3 +32,17 @@
     .document_list(4%);
     border-bottom:solid 1px #42c0fb;
 }
+
+//预览
+#pdf_container{
+    height:400px;
+    overflow:auto;
+}
+#pdf_loading{
+    background:url(../images/loading.gif) no-repeat center center;
+}
+#pdf-canvas{
+    border:1px solid black;
+    display:none;
+    margin-bottom:5px;
+}
