--- a/chariot-web/app/views/login.scala.html
+++ b/chariot-web/app/views/login.scala.html
@@ -16,7 +16,6 @@
         <li><a id="wc_Site_Topbar1_hlLogin" title="登入" class="sign-in" href="/login">登入</a></li> 
         <li class="last"><a class="help" href="/help/" title="打开帮助中心" target="_blank">说明</a></li> 
       </ol> 
-      <a class="logo" href="/" title="提供最佳的律师咨询服务！">LAWBINGO™</a>
     </div>    
   </div> 
 </div>
@@ -46,7 +45,7 @@
             <label id="wc_Login1_usernameLabel" for="wc_Login1_txtUsername">输入您的账户名称：</label>
         </div>
         <div class="fld_inp">
-            <input name="email" required="" type="text" maxlength="50" size="20" id="wc_Login1_txtUsername" tabindex="1" title="Please enter a username." class="RQR textfield notranslate" value="@form("email").value"/>
+            <input name="email" required="" type="text" maxlength="50" size="20" id="wc_Login1_txtUsername" tabindex="1" title="Please enter a username." class="RQR textfield notranslate" placeholder="邮箱地址"/>
         </div>
     </div>
 
