--- a/chariot-web/app/views/registerSuccess.scala.html
+++ b/chariot-web/app/views/registerSuccess.scala.html
@@ -1,11 +1,9 @@
-@(title: String, user: EndUser)(content: Html)
+@(url: String)
 
 <!DOCTYPE html>
 
 <html>
     <head>
-        <title>@title</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/origin.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
@@ -13,19 +11,17 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-
-        <div class="base-header anon-header" id="hd"> 
+    <div class="base-header anon-header" id="hd"> 
   <div id="wc_Site_Topbar1_divNav" class="no-nav new-anon-header" style="padding-top:20px;padding-bottom:20px">	  
     <div> 
-      <span style="margin-left:30px">@title</span>
-      <span style="float:right; margin-right:30px">
-      <span class="username">@user.name</span> <span class="email">(@user.email)</span>
-      <a href="@routes.Application.logout()" class="btn-default navbar-btn">退出</a>
-      </span>
+      <span style="margin-left:30px">LAWBINGO</span>
     </div>    
   </div> 
 </div>
-        @content
+	<div style="margin-left:30px">
+		<p>您已经成功注册账号，请点击下面的链接完成账户激活</p>
+        <div><a href="@url">点击完成账户激活</a></div>
+    </div>
     </body>
     <div id="ft" class="base-footer  anon-footer ">
     <div class="inner-ft " style="margin-left:30px !important">
