--- a/chariot-admin/app/assets/stylesheets/apps/_document.less
+++ b/chariot-admin/app/assets/stylesheets/apps/_document.less
@@ -45,3 +45,17 @@
     display:none;
     margin-bottom:15px;
 }
+
+
+//依赖
+.d_rule_list{
+    li{
+        padding:5px 0;
+        line-height:20px;
+        cursor:pointer;
+        &:hover{
+            background:#dbdbdb;
+        }
+    }
+}
+
