--- a/chariot-admin/app/views/documents/detail.scala.html
+++ b/chariot-admin/app/views/documents/detail.scala.html
@@ -6,6 +6,7 @@
         <a href="#/page/@document.id">编辑模块分页>></a>
         <a class="downloadLink btn btn-primary btn-sm"  href="/service/download/@helper.urlEncode(document.name)/@document.id">下载文档</a>
         <a class="downloadLink btn btn-primary btn-sm J_preview" data-id="@document.id" style="right:165px;" target="_blank" href="javascript:;" >预览文档</a>
+        <a class="downloadLink btn btn-primary btn-sm J_module_question" data-id="@document.id" style="right:10px;" href="javascript:;" >编辑问题</a>
     </li>
 </ol>
 
@@ -49,6 +50,7 @@
                             <a class="downloadLink btn btn-primary btn-sm J_preview" data-id="@module.id"  target="_blank" href="javascript:;" >预览模块</a>
                             <a class="downloadLink btn btn-primary btn-sm"  href="/service/download/@helper.urlEncode(module.name)/@module.id">下载模块</a>
                         	<a class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.id">更新模块</a>
+                            <a class="downloadLink btn btn-primary btn-sm J_rules" data-id="@module.id" data-document="@document.id">制定规则</a>
                         </div>
                         <script>
                          jQuery(function(){
@@ -86,4 +88,15 @@
 <script>
     PDFJS.workerSrc = '@routes.Assets.at("javascripts/pdf/build/pdf.worker.js")';
     window.Preview();
+
+    //制定规则
+    $('.J_rules').click(function(){
+        Rules.edit($(this).data("document"),$(this).data('id'));
+    });
+
+    //文档级别问题
+    $('.J_module_question').each(function(i,btn){
+        var mq = new ModuleQuestion($(btn).data('id'));
+        $(btn).click(function(){mq.edit()});
+    });
 </script>
